[gd_scene load_steps=14 format=3 uid="uid://cix1j6ynfe7pn"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_y46dv"]
[ext_resource type="Script" path="res://UI/minimap.gd" id="2_7l5sd"]
[ext_resource type="Script" path="res://UI/gui_drag_space.gd" id="2_c3q03"]
[ext_resource type="Shader" path="res://Resources/selection_space_shader.gdshader" id="2_reoib"]
[ext_resource type="Script" path="res://UI/scroll_vbox_controller.gd" id="2_xdmpv"]
[ext_resource type="Texture2D" uid="uid://d2ojqjerpiwf6" path="res://Assets/Sprites/Items/Weapons/Bow/Sprite.png" id="3_gv8b5"]
[ext_resource type="Texture2D" uid="uid://vkamqn6t8m1k" path="res://Assets/Sprites/Characters/Boy/Faceset.png" id="5_5b8f5"]
[ext_resource type="PackedScene" uid="uid://u3ywy74448gn" path="res://UI/gun_preview_viewport.tscn" id="8_my3mk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y1ifb"]
shader = ExtResource("2_reoib")
shader_parameter/shake_power = 0.005
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 20.0
shader_parameter/shake_color_rate = 0.3

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_bawmo"]

[sub_resource type="Animation" id="Animation_40vnb"]
resource_name = "Idle"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(4, -20), Vector2(5, -25)]
}

[sub_resource type="Animation" id="Animation_v4qme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2atdu"]
_data = {
"Idle": SubResource("Animation_40vnb"),
"RESET": SubResource("Animation_v4qme")
}

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y46dv")

[node name="DragSpace" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_y1ifb")
layout_direction = 1
layout_mode = 1
offset_left = 556.0
offset_top = 304.0
offset_right = 1056.0
offset_bottom = 804.0
script = ExtResource("2_c3q03")

[node name="Label" type="Label" parent="DragSpace"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "DROP ITEM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reticle" type="TextureRect" parent="Control"]
modulate = Color(1, 1, 1, 0.32549)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.5
offset_top = -7.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_bawmo")

[node name="StatusDisplay" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="HP" type="HBoxContainer" parent="StatusDisplay"]
layout_mode = 2

[node name="HpLabel" type="Label" parent="StatusDisplay/HP"]
layout_mode = 2
text = "Health"

[node name="VSeparator" type="VSeparator" parent="StatusDisplay/HP"]
layout_mode = 2

[node name="HpValue" type="Label" parent="StatusDisplay/HP"]
unique_name_in_owner = true
layout_mode = 2
text = "100"

[node name="WeaponDisplay" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Status" type="HBoxContainer" parent="WeaponDisplay"]
layout_mode = 2

[node name="GunName" type="Label" parent="WeaponDisplay/Status"]
unique_name_in_owner = true
layout_mode = 2
text = "Test Gun A"

[node name="ReloadIndicator" type="Label" parent="WeaponDisplay/Status"]
unique_name_in_owner = true
layout_mode = 2
text = "Reloading..."

[node name="Ammo" type="HBoxContainer" parent="WeaponDisplay"]
layout_mode = 2

[node name="Magazine" type="Label" parent="WeaponDisplay/Ammo"]
unique_name_in_owner = true
layout_mode = 2
text = "12"

[node name="VSeparator" type="VSeparator" parent="WeaponDisplay/Ammo"]
layout_mode = 2

[node name="Total" type="Label" parent="WeaponDisplay/Ammo"]
unique_name_in_owner = true
layout_mode = 2
text = "64"

[node name="ProgressBar" type="ProgressBar" parent="WeaponDisplay"]
unique_name_in_owner = true
layout_mode = 2
value = 20.0
show_percentage = false

[node name="PanelContainer" type="PanelContainer" parent="WeaponDisplay"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="WeaponDisplay/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(192, 64)
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("2_xdmpv")
test_tex = ExtResource("5_5b8f5")

[node name="Minimap" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("2_7l5sd")
detect_dist = 50

[node name="Panel" type="Panel" parent="Minimap"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="ColorRect" type="ColorRect" parent="Minimap/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2618, 0.77, 0.39732, 1)

[node name="TargetDisplay" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.5
offset_right = 152.5
offset_bottom = 54.0
grow_horizontal = 2

[node name="TargetHp" type="ProgressBar" parent="TargetDisplay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="TargetLabel" type="Label" parent="TargetDisplay"]
unique_name_in_owner = true
layout_mode = 2

[node name="WeaponSprite" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="WeaponSprite"]
custom_minimum_size = Vector2(180, 100)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="WeaponSprite/MarginContainer"]
rotation = 1.14319
scale = Vector2(25, 25)
texture = ExtResource("3_gv8b5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="WeaponSprite"]
libraries = {
"": SubResource("AnimationLibrary_2atdu")
}
autoplay = "Idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GunPreview" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -284.0
offset_top = -139.0
offset_bottom = 139.0
grow_horizontal = 0
grow_vertical = 2

[node name="GunPreviewViewport" parent="CanvasLayer/GunPreview" instance=ExtResource("8_my3mk")]
unique_name_in_owner = true
visible = false
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1
